# rust-backend-setup

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  makefile  mock.json  readme.md
app/: Cargo.toml
app/http/: health.http  http-client.env.json  login.http
app/migrations/: 20240309182152_add_user_sessions_and_refresh_tokens_tables.sql  20240311141045_add_user_id_column_refresh_tokens.sql  20240311143324_fix_session_column_name_typo.sql  20240507141809_add_admin_column_to_user_table.sql  20240715131802_add_abac_tables.sql  20240716081107_make_role_name_unique_per_organisation.sql  20240722185533_add_organisation_and_roles_tables.sql  20240723093343_add_admin_column_to_organisation.sql  20240723093656_remove_admin_column_from_users.sql  20240723095135_remove_organisations.sql  20240723102136_add_user_teams.sql  20240723104657_add_root_role.sql  20240815121129_drop_permission_and_resource_tables.sql  20240815122113_add_admin_role.sql  20240902091750_rename_user_roles.sql  20240902091805_add_team_manager_role.sql  20240902140844_delete_roles_table_and_create_role_enum.sql  20240905085650_remove_user_roles_and_update_users_table_with_system_role.sql  20240905091308_add_column_manager_to_team_members.sql
app/src/: app_state.rs  database.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
app/src/configuration/: admin.rs  application.rs  configuration.rs  database.rs  mod.rs  telemetry.rs
app/src/extractors/: auth_test.rs  authenticated_user.rs  mod.rs
app/src/extractors/admin/: admin.rs
app/src/extractors/authenticated_user/: authenticated_user.rs  logout.rs  mod.rs
app/src/extractors/user/: mod.rs  user_extractor.rs  user_with.rs  user_with_policy.rs
app/src/extractors/user/actions/: create_team.rs
app/src/extractors/user/permission_extractor/: mod.rs  permission_of.rs
app/src/handlers/: error.rs  mod.rs
app/src/handlers/internal/v1/: current_user.rs  mod.rs
app/src/handlers/v1/: health_check.rs  mod.rs
app/src/handlers/v1/auth/: authentication_error.rs  mod.rs
app/src/handlers/v1/teams/: create_team.rs  mod.rs  (+2 more)
app/src/middleware/: capture_trace_data.rs  mod.rs
app/src/policy/: mod.rs  policy.rs  policy_authorization_error.rs
app/src/policy/policies/: add_team_members_policy.rs  create_team_policy.rs  create_user_policy.rs  get_team_members_policy.rs  get_teams_policy.rs  mod.rs  read_user_details_policy.rs  view_teams_policy.rs
app/src/queries/: database.rs  exist_user_of.rs  exist_user_of.sql  get_active_session_by_id.rs  get_active_session_by_id.sql  get_latest_token_for_session.rs  get_latest_token_for_session.sql  get_members_by_team_id.rs  get_members_by_team_id.sql  get_members_for_team.rs  get_members_for_team.sql  get_refresh_token_by_id.rs  get_refresh_token_by_id.sql  get_system_role_of_user.rs  get_system_role_of_user.sql  get_teams.rs  get_teams.sql  get_user_attributes.rs  get_user_attributes.sql  get_user_credentials.rs  get_user_details.rs  get_user_memberships.rs  get_user_memberships.sql  get_user_roles.rs  get_user_roles.sql  get_user_teams.rs  get_user_teams.sql  is_admin.rs  is_admin.sql  mod.rs  save_just_ended_user_session.rs  save_newly_created_user_session.rs  save_refresh_token.rs  save_refreshed_user_session.rs  save_user.rs
app/src/queries/models/: mod.rs  refresh_token_record.rs  user_attributes_record.rs  user_record.rs  user_session_record.rs
app/src/queries/permissions/: mod.rs  permission_querier.rs  querier.rs  querier_scheme.rs  read_organisation_users.rs  read_team_members.rs
app/src/queries/records/: mod.rs  refresh_token_record.rs  role_record.rs  user_record.rs  user_role_record.rs  user_session_record.rs
app/src/queries/transaction/: _transaction.rs  add_member_to_team.rs  add_member_to_team.sql  add_role_to_user.rs  add_role_to_user.sql  add_simple_role_to_user.sql  add_team_manager_role_to_user.sql  get_user_credentials.rs  mod.rs  persist_new_admin.rs  persist_new_admin.sql  save_just_ended_user_session.rs  save_just_ended_user_session.sql  save_new_role_to_user.rs  save_new_user.rs  save_new_user.sql  save_new_user_role.sql  save_newly_created_user_session.rs  save_newly_created_user_session.sql  save_refresh_token.rs  save_refresh_token.sql  save_refreshed_user_session.rs  save_team.rs  save_team.sql  save_team_member.rs  save_team_member.sql  save_user.rs  save_user.sql  update_user_password.rs  update_user_password.sql
app/src/util/: handlers.rs
app/tests/: mod.rs
app/tests/api/: mod.rs
app/tests/api/v1/: current_user.rs  health_check.rs  mod.rs
app/tests/util/: api_client.rs  mod.rs  spawn_app.rs  test_app.rs
app/tests/util/test_user/: anonymous.rs  logged_in.rs  mod.rs  test_user.rs  user_state.rs
libs/domain/: Cargo.toml
libs/domain/src/: lib.rs
libs/domain/src/abac/: mod.rs  permission.rs  role.rs
libs/domain/src/organisation/: member.rs  mod.rs  organisation.rs  organisation_id.rs
libs/domain/src/permission/: permission.rs
libs/domain/src/sessions/: mod.rs  user_session.rs  user_session_token.rs
libs/domain/src/shared/: activation_time.rs  expiration.rs  mod.rs  slug.rs
libs/domain/src/user/: mod.rs  password.rs  user.rs  user_credentails.rs  user_permissions.rs
libs/infrastructure/: Cargo.toml
libs/infrastructure/src/: lib.rs  paseto_token_encryptor.rs
libs/infrastructure/src/paseto/: mod.rs  paseto_token_encryptor.rs
libs/lib-auth/: Cargo.toml
libs/lib-auth/src/security/: mod.rs
libs/lib-domain/: Cargo.toml
libs/lib-domain/src/: lib.rs
libs/lib-domain/src/sessions/: mod.rs  token.rs  tokens.rs  user_session.rs  user_session_token.rs
libs/lib-domain/src/shared/: activation_time.rs  expiration.rs
libs/lib-domain/src/user/: password.rs  user.rs
libs/security/: Cargo.toml
libs/security/src/: lib.rs
libs/security/src/encryption/: decryptor.rs  encryptor.rs
libs/security/src/hash/: argon2.rs  mod.rs  schema.rs
libs/security/src/token/: mod.rs  token.rs
libs/test-utility/: Cargo.toml
libs/test-utility/src/: lib.rs
libs/test-utility/src/random/: access_token.rs  refresh_token.rs  user.rs  user_session.rs
(+172 files in other folders)
