[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    "app",

    # -- Libraries
    "libs/infrastructure",
    "libs/security",
    "libs/domain",
    "libs/test-utility",
    "libs/lib-util",
]

#[package]
#name = "rust-backend-setup"
#version = "0.1.0"
#edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
thiserror = { version = "1.0.57" }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
regex = { version = "1.10.3" }
rand = { version = "0.8.5" }
serde_json = { version = "1.0.114" }
password-hash = { version = "0.5.0" }
pasetors = { version = "0.6.8" }