[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-auth = { path = "../libs/lib-auth"}
lib-util = { path = "../libs/lib-util"}
lib-domain = { path = "../libs/lib-domain"}
infrastructure = { path = "../libs/infrastructure"}

anyhow = "1.0.80"
axum = "0.7.4"
bcrypt = "0.14.0"
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
fake = "2.9.2"
regex = "1.10.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
once_cell = "1.19.0"
tower-http = { version = "0.5.2", features = ["trace"] }
secrecy = { version = "0.8.0", features = ["serde"] }
rand = "0.8.5"
password-hash = "0.5.0"
pasetors = "0.6.8"
axum-extra = { version = "0.9.2", features = ["typed-header"] }

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.uuid]
version = "1.3.0"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[lints]
workspace = true

[dev-dependencies]
lib-test-util = { path = "../libs/lib-test-util"}