[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
security ={ path = "../libs/security" }
lib-util = { path = "../libs/lib-util"}
domain = { path = "../libs/domain" }
infrastructure = { path = "../libs/infrastructure"}

anyhow = { version = "1.0.80" }
axum = { version = "0.7.4" }
bcrypt = { version = "0.14.0" }
config = { version = "0.14.0" }
fake = { version = "2.9.2" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde-aux = { version = "4.5.0" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = { version = "0.3.9" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
once_cell = { version = "1.19.0" }
tower-http = { version = "0.5.2", features = ["trace"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }

enum_dispatch.workspace = true
password-hash.workspace = true
pasetors.workspace = true
serde.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
secrecy.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
opentelemetry = { version = "0.22.0", features = ["trace"]}
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio", "rt-tokio-current-thread"]}
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest-client"]}
tracing-opentelemetry = { version = "0.23.0" }
opentelemetry-semantic-conventions = "0.14.0"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[lints]
workspace = true

[dev-dependencies]
test-utility = { path = "../libs/test-utility" }
