[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Local
lib-util = { path = "../lib-util"}
security ={ path = "../security" }

# -- Other
password-hash.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
secrecy.workspace = true
regex.workspace = true
slug = "0.1.5"
strum = "0.26.3"
strum_macros = "0.26.3"

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true

