[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-auth = { path = "../lib-auth"}
lib-util = { path = "../lib-util" }

pasetors.workspace = true
serde_json.workspace = true
serde.workspace = true
secrecy.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true

[lints]
workspace = true
