[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-util = { path = "../lib-util" }

argon2 = { version = "0.5.3", features = ["std"] }
password-hash = "0.5.0"
enum_dispatch = "0.3.12"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
pasetors = "0.6.8"
chrono = "0.4.34"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
serde_json = "1.0.114"
thiserror = "1.0.57"

[dev-dependencies]
rand = "0.8.5"

[lints]
workspace = true
