[package]
name = "lib-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Local
lib-util = { path = "../lib-util"}
lib-auth = { path = "../lib-auth"}

# -- Other
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = "0.4.34"
rand = "0.8.5"
password-hash = "0.5.0"
secrecy = { version = "0.8.0", features = ["serde"] }
regex = "1.10.3"
tracing = { version = "0.1.40", features = ["log"] }

[lints]
workspace = true

