[package]
name = "security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-util = { path = "../lib-util" }

argon2 = { version = "0.5.3", features = ["std"] }
enum_dispatch = "0.3.12"

password-hash.workspace = true
secrecy.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
