[package]
name = "test-utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Local
lib-util = { path = "../lib-util"}
security ={ path = "../security" }
domain = { path = "../domain" }

# Shared
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
secrecy.workspace = true
regex.workspace = true
password-hash.workspace = true


# -- Other

[lints]
workspace = true
